# 5pm

./: README.md  index.html  next.config.ts  package-lock.json  package.json  plan.md
.github/workflows/: deploy.yml  release-desktop.yml
.run/: Tauri Build.run.xml  Tauri Dev.run.xml  Vite Dev Server.run.xml  dev.run.xml
assets/Apple Icon.icon/: icon.json
scripts/: update-build-version.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  page.tsx
src/app/components/: CountdownClock.tsx
src/app/version.json/: route.ts
src/components/: CountdownClock.tsx  Settings.tsx
src/hooks/: useTimer.ts  useUpdater.ts
src/lib/: platform.ts  time.ts
